NLP TP/texts/robotics/robotics.stackexchange_0000083138.txt
Q:

rviz not compiling mac osx

I was trying to install ROS on mac after having traded from ubuntu. I found some of these inconsistencies in the latest boost libraries.
1 . The latest boost library does not offer tr1/* hence rospack fails to compile which uses this library. Got around this by including the older boost version libraries.
2 . The rviz package does not build with the following errors. I tried including the older version for this but roscpp fails to build as there is some problem with that particular older version of boost. Any help is greatly appreciated.
In file included from /Users/sreeharshacs/ros_catkin_ws/src/rviz/src/image_view/main.cpp:42:
In file included from /Users/sreeharshacs/ros_catkin_ws/src/rviz/src/image_view/image_view.h:31:
In file included from /Users/sreeharshacs/ros_catkin_ws/src/rviz/src/rviz/ogre_helpers/qt_ogre_render_window.h:36:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/OgreColourValue.h:31:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/OgrePrerequisites.h:315:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/OgreStdHeaders.h:114:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/Threading/OgreThreadHeaders.h:30:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/Threading/OgreThreadHeadersBoost.h:30:
In file included from /usr/local/include/boost/thread/recursive_mutex.hpp:16:
In file included from /usr/local/include/boost/thread/pthread/recursive_mutex.hpp:23:
/usr/local/include/boost/thread/pthread/pthread_mutex_scoped_lock.hpp:33:26: error: expected member name or ';' after declaration specifiers
            void check() BOOST_NOEXCEPT
                             ^
/usr/local/include/boost/config/detail/suffix.hpp:959:26: note: expanded from macro 'BOOST_NOEXCEPT'
#  define BOOST_NOEXCEPT noexcept
                         ^
In file included from /Users/sreeharshacs/ros_catkin_ws/src/rviz/src/image_view/main.cpp:42:
In file included from /Users/sreeharshacs/ros_catkin_ws/src/rviz/src/image_view/image_view.h:31:
In file included from /Users/sreeharshacs/ros_catkin_ws/src/rviz/src/rviz/ogre_helpers/qt_ogre_render_window.h:36:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/OgreColourValue.h:31:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/OgrePrerequisites.h:315:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/OgreStdHeaders.h:114:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/Threading/OgreThreadHeaders.h:30:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/Threading/OgreThreadHeadersBoost.h:31:
In file included from /usr/local/include/boost/thread/condition.hpp:13:
In file included from /usr/local/include/boost/thread/condition_variable.hpp:16:
In file included from /usr/local/include/boost/thread/pthread/condition_variable.hpp:12:
/usr/local/include/boost/thread/pthread/thread_data.hpp:213:13: error: expected member name or ';' after declaration specifiers
            {
            ^
In file included from /Users/sreeharshacs/ros_catkin_ws/src/rviz/src/image_view/main.cpp:42:
In file included from /Users/sreeharshacs/ros_catkin_ws/src/rviz/src/image_view/image_view.h:31:
In file included from /Users/sreeharshacs/ros_catkin_ws/src/rviz/src/rviz/ogre_helpers/qt_ogre_render_window.h:36:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/OgreColourValue.h:31:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/OgrePrerequisites.h:315:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/OgreStdHeaders.h:114:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/Threading/OgreThreadHeaders.h:30:
In file included from /usr/local/Cellar/ogre/1.7.4_4/include/OGRE/Threading/OgreThreadHeadersBoost.h:31:
In file included from /usr/local/include/boost/thread/condition.hpp:13:
In file included from /usr/local/include/boost/thread/condition_variable.hpp:16:
/usr/local/include/boost/thread/pthread/condition_variable.hpp:82:43: error: expected unqualified-id
            check_for_interruption.check();
                                          ^
/usr/local/include/boost/thread/pthread/condition_variable.hpp:116:43: error: expected unqualified-id
            check_for_interruption.check();
                                          ^
/usr/local/include/boost/thread/pthread/condition_variable.hpp:193:47: error: expected unqualified-id
                check_for_interruption.check();
                                              ^
/usr/local/include/boost/thread/pthread/condition_variable.hpp:423:45: error: expected unqualified-id
              check_for_interruption.check();
                                            ^

Originally posted by harsha336 on ROS Answers with karma: 26 on 2017-10-03
Post score: 0

A:

I managed to solve this particular issue by adding
#ifdef __APPLE__ 
#define __ASSERT_MACROS_DEFINE_VERSIONS_WITHOUT_UNDERSCORES 0
#endif

before the first include in rviz/src/image_view/main.cpp.
See also this question on stackoverflow.

Originally posted by dischu with karma: 56 on 2017-11-30
This answer was ACCEPTED on the original site
Post score: 1

